--- a/backend/package.json
+++ b/backend/package.json
@@ -29,5 +29,8 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
+  },
+  "engines": {
+    "node" : ">=10.0.0"
   }
 }
